--- a/css/app.css
+++ b/css/app.css
@@ -203,6 +203,7 @@ html {
 
 .is-relative {
     position: relative;
+    z-index: 1;
 }
 
 .ml--6 {
@@ -323,6 +324,7 @@ html {
 
 .bold {
     font-weight: 700;
+    font-family: "Open Sans", sans-serif;
 }
 
 .booking__input-text {
@@ -339,17 +341,52 @@ html {
     position: absolute;
     width: 100%;
     top: 110%;
-    border: 1px solid var(--gray-color);
+    border: 1px solid #f5f5f5;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 1px 1px 4px rgb(0 0 0 / 20%);
     display: none;
 }
 
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #ffffff;
+    bottom: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader-icon {
+    font-size: 70px;
+    color: #16A596;
+    animation: loader 1s ease-in-out infinite;
+}
+
+@keyframes loader{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+
 .search__suggest-heading {
     padding-top: 16px;
     text-align: center;
-    font-weight: 500;
+    font-weight: 700;
+    font-family: "Open Sans", sans-serif;
+}
+
+.search__suggest-item:hover {
+    color: #ff6347;
+    background: #FDF6F0;
+    transition: all .3s linear;
 }
 
 .search__suggest-list {
@@ -382,7 +419,8 @@ html {
 .search__suggest-title {
     margin-bottom: 0;
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 700;
+    font-family: "Open Sans" , sans-serif;
 }
 
 .search__suggest-item.active {
@@ -396,7 +434,7 @@ html {
 
 .change__languages {
     position: absolute;
-    width: 468px;
+    width: 168px;
     background: #fff;
     border: 1px solid #ddd;
     right: 0;
@@ -426,7 +464,7 @@ html {
 }
 
 .change__languages-list {
-    width: 50%;
+    /* width: 50%; */
     font-size: 15px;
     font-weight: 400;
     margin: 10px 0;
@@ -455,6 +493,23 @@ html {
 .change__languages-vi span {
     font-size: 13px;
     padding-left: 5px;
+}
+
+.header__nav-language {
+    display: flex;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 6px 8px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.header__nav-language-name {
+    margin-bottom: 0px;
+    font-size: 15px;
+    font-weight: 700;
+    padding: 0px 8px;
+    font-family: "Open Sans", sans-serif;
 }
 
 small, .small {
@@ -503,6 +558,10 @@ small, .small {
     padding: 10px;
     background: rgba(0,0,0,.04);
     border-radius: 50%;
+}
+
+.header__logo:hover {
+    color: #ff6347;
 }
 
 .is-inline-block {
@@ -597,13 +656,19 @@ a.color-i, a:hover {
 }
 
 .menu {
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 
 .menu__item {
     margin-left: 20px;
     font-size: .875rem;
     letter-spacing: .2px;
+}
+
+.menu__link {
+    font-weight: 700;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .btn--dropdown {
@@ -749,7 +814,21 @@ a.color-i, a:hover {
 .search-guest .svg-icon {
     flex: 0 0 14px;
 }
-/* end */
+
+.change__languages-list.space-line::before {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 90%;
+    top: 5px;
+    background-color: #ddd;
+}
+
+.change__languages-vi:hover {
+    color: #f65e39;
+    transition: all .3s ease-in;
+}
+/* --end-- */
 
 /* For desktop: */
 .col-1 {width: 8.33%;}
